# FEC

./: ProximosPlanDeTrabajo.txt  README.md  package-lock.json  package.json  tauri.conf.json
fec-frontend/: package-lock.json  package.json
fec-frontend/.svelte-kit/: ambient.d.ts
fec-frontend/.svelte-kit/output/client/.vite/: manifest.json
fec-frontend/.svelte-kit/output/client/_app/: version.json
fec-frontend/.svelte-kit/output/client/_app/immutable/chunks/: Bw2UddjI.js
fec-frontend/.svelte-kit/output/client/_app/immutable/entry/: app.DLikkyR-.js  start.BRijRxpJ.js
fec-frontend/.svelte-kit/output/client/_app/immutable/nodes/: 1.KPe_E8Oi.js  2.Bw43A8G8.js
fec-frontend/.svelte-kit/output/server/: index.js  manifest.js
fec-frontend/.svelte-kit/output/server/.vite/: manifest.json
fec-frontend/.svelte-kit/output/server/_app/immutable/assets/: _page.DNxa9L24.css
fec-frontend/.svelte-kit/output/server/chunks/: internal.js
fec-frontend/.svelte-kit/output/server/entries/pages/: _page.svelte.js
fec-frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
fec-frontend/src/routes/: +page.svelte
src-tauri/: Cargo.toml  package.json  tauri.conf.json
src-tauri/src/: clave_acceso.rs  main.rs
